Really hide "I already have an ISO" + fix some alignement

--- a/wiki/src/install/inc/stylesheets/dave.css
+++ b/wiki/src/install/inc/stylesheets/dave.css
@@ -231,9 +231,8 @@ p.direct-download {
 }
 
 /* Hide "I already have an ISO" for the time being... */
-#i_have_iso {
+#download-and-verify #i_have_iso {
   display:none !important;
-  opacity: 0;
 }
 
 /* Hide download path once downloaded. */
@@ -401,8 +400,12 @@ html[data-phase="ready"] #bittorrent-minor {
 
 #download-button-state-cancel {
   text-decoration: underline;
+  text-align: right;
 }
 
+#download-button-state {
+  text-align: right;
+}
 #download-and-verify small {
   font-size: 65% ;
   text-align: left;
